初始化系统

--- a/TAF.Web/Views/Account/_UserIndex.cshtml
+++ b/TAF.Web/Views/Account/_UserIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<SCBF.Utility.KeyValue<string, int, string>>
+﻿@model List<TAF.Utility.KeyValue<string, int, string>>
 <div class="row">
         <div class="col-xs-12 col-md-12">
             <div class="widget">
