--- a/TAF.Web/Views/Storage/_ProductCategoryIndex.cshtml
+++ b/TAF.Web/Views/Storage/_ProductCategoryIndex.cshtml
@@ -32,7 +32,7 @@
                             <label class="col-sm-2 control-label no-padding-right">父级分类</label>
                             <div class="col-sm-10">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" readonly="readonly" required name="pname" v-model="item.pName">
+                                    <input type="text" class="form-control" readonly="readonly"  v-model="item.pName">
                                     <div class="input-group-btn open">
                                         <a class="btn btn-blue " href="javascript:void(0);" aria-expanded="true" ><i class="fa fa-angle-down"></i></a>
                                     </div>
