--- a/TAF.Web/Views/SysDictionary/_SysDictionaryIndex.cshtml
+++ b/TAF.Web/Views/SysDictionary/_SysDictionaryIndex.cshtml
@@ -20,6 +20,11 @@
                                         商品品牌
                                     </a>
                                 </li>
+                                <li class=" ">
+                                    <a data-toggle="tab" href="#storage" aria-expanded="true" id="pstorage">
+                                        仓库
+                                    </a>
+                                </li>
                             </ul>
                             <div class="tab-content">
                                 <div id="color" class="tab-pane active">
@@ -76,9 +81,55 @@
                                         <div class="col-md-6">
                                             <table class="table table-striped table-hover table-bordered ">
                                                 <thead>
+                                                <tr role="row">
+                                                    <th style="width: 200px;">
+                                                        品牌
+                                                    </th>
+                                                    <th style="width: 200px;">
+                                                        备注
+                                                    </th>
+                                                    <th style="width: 200px;">
+                                                        操作
+                                                    </th>
+                                                </tr>
+                                                <tr role="row">
+                                                    <th>
+                                                        <input type="text" class="form-control" placeholder="品牌" v-model="queryEntity.value" />
+                                                    </th>
+                                                    <th>
+                                                        <input type="text" class="form-control" placeholder="备注" v-model="queryEntity.note" />
+                                                    </th>
+                                                    <th>
+                                                        <button type="button" class="btn edit" v-on:click="search('ProductBrand')"><i class="fa fa-search"></i> 搜索</button>
+                                                        <button type="button" class="btn edit" v-on:click="resetSearch()"><i class="fa fa-times"></i> 重置</button>
+                                                    </th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr v-for="item in list">
+                                                    <td>{{item.value}}</td>
+                                                    <td>{{item.note}}</td>
+                                                    <td>
+                                                        <row-command :id="item.id" title="编辑" :name="item.value"></row-command>
+                                                    </td>
+                                                </tr>
+                                                </tbody>
+                                                <tfoot is="table-foot" colspan="5"></tfoot>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="storage" class="tab-pane ">
+                                    <div class="table-toolbar">
+                                        <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('仓库','Storage')"><i class="fa  fa-plus"></i> 新增</a>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <table class="table table-striped table-hover table-bordered ">
+                                                <thead>
                                                     <tr role="row">
                                                         <th style="width: 200px;">
-                                                            品牌
+                                                            仓库
                                                         </th>
                                                         <th style="width: 200px;">
                                                             备注
@@ -89,13 +140,13 @@
                                                     </tr>
                                                     <tr role="row">
                                                         <th>
-                                                            <input type="text" class="form-control" placeholder="品牌" v-model="queryEntity.value" />
+                                                            <input type="text" class="form-control" placeholder="仓库" v-model="queryEntity.value" />
                                                         </th>
                                                         <th>
                                                             <input type="text" class="form-control" placeholder="备注" v-model="queryEntity.note" />
                                                         </th>
                                                         <th>
-                                                            <button type="button" class="btn edit" v-on:click="search('ProductBrand')"><i class="fa fa-search"></i> 搜索</button>
+                                                            <button type="button" class="btn edit" v-on:click="search('Storage')"><i class="fa fa-search"></i> 搜索</button>
                                                             <button type="button" class="btn edit" v-on:click="resetSearch()"><i class="fa fa-times"></i> 重置</button>
                                                         </th>
                                                     </tr>
