--- a/TAF.Web/Views/Product/_ProductIndex.cshtml
+++ b/TAF.Web/Views/Product/_ProductIndex.cshtml
@@ -171,17 +171,7 @@
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label no-padding-right">单位换算<span class="red">*</span></label>
                                     <div class="col-sm-10">
-                                        <div class="spinbox spinbox-horizontal spinbox-right" id="spinboxUnitConversion">
-                                            <div class="spinbox-buttons	btn-group">
-                                                <button type="button" class="btn spinbox-down blueberry">
-                                                    <i class="fa fa-minus"></i>
-                                                </button>
-                                                <button type="button" class="btn spinbox-up purple">
-                                                    <i class="fa fa-plus"></i>
-                                                </button>
-                                            </div>
-                                            <input type="text" class="form-control spinbox-input " placeholder="必填" id="unitConversion" name="unitconversion" v-model="item.unitConversion" v-validate:unitconversion="{int:true}" />
-                                        </div>
+                                            <input type="number" class="form-control spinbox-input " placeholder="必填" id="unitConversion" name="unitconversion" v-model="item.unitConversion" v-validate:unitconversion="{int:true}" />
                                     </div>
                                 </div>
                             </div>
