--- a/TAF.Web/Views/Product/_ProductIndex.cshtml
+++ b/TAF.Web/Views/Product/_ProductIndex.cshtml
@@ -145,33 +145,11 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <label class="col-sm-2 control-label no-padding-right">主单位<span class="red">*</span></label>
+                                    <label class="col-sm-2 control-label no-padding-right">单位<span class="red">*</span></label>
                                     <div class="col-sm-10">
                                         <span class="input-icon icon-right">
                                             <input type="text" class="form-control " placeholder="必填" name="unit" v-model="item.unit" v-validate:unit="{required:true}" />
                                         </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label no-padding-right">次单位<span class="red">*</span></label>
-                                    <div class="col-sm-10">
-                                        <span class="input-icon icon-right">
-                                            <input type="text" class="form-control " placeholder="必填" name="unit2" v-model="item.unit2" v-validate:unit2="{required:true}" />
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label no-padding-right">单位换算<span class="red">*</span></label>
-                                    <div class="col-sm-10">
-                                            <input type="number" class="form-control spinbox-input " placeholder="必填" id="unitConversion" name="unitconversion" v-model="item.unitConversion" v-validate:unitconversion="{int:true}" />
                                     </div>
                                 </div>
                             </div>
