--- a/TAF.Web/Views/Home/Index.cshtml
+++ b/TAF.Web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @model SCBF.Users.User
 @{
 
-    ViewBag.Title = "亿科环境信息管理系统";
+    ViewBag.Title = "四川边防信息管理系统";
 }
 
     <!-- Navbar -->
@@ -14,7 +14,7 @@
             <div class="navbar-header pull-left">
                 <a href="#" class="navbar-brand">
                     <small>
-                        亿科环境信息管理系统
+                        四川边防信息管理系统
                     </small>
                 </a>
             </div>
