--- a/TAF.Web/Views/Home/_Dashboard.cshtml
+++ b/TAF.Web/Views/Home/_Dashboard.cshtml
@@ -6,7 +6,7 @@
             </div>
             <div class="widget-body">
                     <p>
-                        欢迎登陆亿科环境信息管理系统！
+                        欢迎登陆四川边防信息管理系统！
                     </p>
             </div>
         </div>
