添加财务模块

--- a/TAF.Web/Views/Shared/_Template.cshtml
+++ b/TAF.Web/Views/Shared/_Template.cshtml
@@ -7,8 +7,10 @@
                 <div class="dataTables_info" id="simpledatatable_info" role="status" aria-live="polite"> {{from}} - {{to}} / {{total}} </div>
             </div>
             <div class="col-sm-8 ">
-                <ul id="container" class="pagination">
-                </ul>
+                <div class="dataTables_paginate paging_bootstrap">
+                    <ul id="container" class="pagination"></ul>
+                </div>
+                
             </div>
         </td>
     </tr>
