--- a/TAF.Web/Views/Finance/_FinanceInfoIndex.cshtml
+++ b/TAF.Web/Views/Finance/_FinanceInfoIndex.cshtml
@@ -1,1 +1,92 @@
-﻿
+﻿@model List<TAF.Utility.KeyValue<string, Guid>>
+<div class="row">
+    <div class="col-xs-12 col-md-12">
+        <div class="widget">
+            <div class="widget-header bordered-bottom bordered-primary">
+                <span class="widget-caption">系统配置</span>
+            </div>
+            <div class="widget-body">
+                <div class="row">
+                    <div class="col-lg-12 col-sm-12 col-xs-12">
+                        <div class="tabbable">
+                            <ul class="nav nav-tabs" id="myTab">
+                                <li class="tab-red active">
+                                    <a data-toggle="tab" href="#color" aria-expanded="false" id="year">
+                                        会计年度
+                                    </a>
+                                </li>
+                            </ul>
+                            <div class="tab-content">
+                                <div id="color" class="tab-pane active">
+                                    <div class="table-toolbar">
+                                        <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('年度','BudgetYear')"><i class="fa  fa-plus"></i> 新增</a>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <table class="table table-striped table-hover table-bordered ">
+                                                <thead>
+                                                    <tr role="row">
+                                                        <th style="width: 200px;">
+                                                            年度
+                                                        </th>
+                                                        <th style="width: 200px;">
+                                                            当前年度
+                                                        </th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr v-for="item in list">
+                                                        <td>{{item.value}}</td>
+                                                        <td>{{item.value4=="True"?"是":""}}</td>
+                                                    </tr>
+                                                </tbody>
+                                                <tfoot is="table-foot" colspan="2"></tfoot>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="horizontal-space"></div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<dialog-delete></dialog-delete>
+<form-edit></form-edit>
+<template id="budgetYearFormBody">
+    <div id="form">
+        <validator name="v">
+            <form class="form-horizontal " name="form" novalidate>
+                <div class="row">
+                    <div class="col-md-12 ">
+                        <div class="alert alert-warning fade in alert-radius-bordered alert-shadowed">
+                            <i class="fa-fw fa fa-info"></i>
+                            <strong>注：</strong>会计年度起始于当前年1月1日,截止于次年3月31日
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label no-padding-right">{{item.title}}<span class="red">*</span></label>
+                            <div class="col-sm-10">
+                                <span class="input-icon icon-right">
+                                    <input type="text" class="form-control " placeholder="必填" name="value" v-model="item.value" v-validate:value="{required:true}" />
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </validator>
+    </div>
+</template>
+<script src="~/Scripts/financeInfoIndex.js"></script>
+
+
+
+
