完成年度支出预算填报页面

--- a/TAF.Web/Views/Finance/_FinanceInfoIndex.cshtml
+++ b/TAF.Web/Views/Finance/_FinanceInfoIndex.cshtml
@@ -19,7 +19,7 @@
                             <div class="tab-content">
                                 <div id="color" class="tab-pane active">
                                     <div class="table-toolbar">
-                                        <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('年度','BudgetYear')"><i class="fa  fa-plus"></i> 新增</a>
+                                        <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('年度','Budget_Year')"><i class="fa  fa-plus"></i> 新增</a>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
