--- a/TAF.Web/Views/BudgetReceipt/_BudgetReceiptIndex.cshtml
+++ b/TAF.Web/Views/BudgetReceipt/_BudgetReceiptIndex.cshtml
@@ -120,7 +120,7 @@
                             <tbody>
                             <tr v-for="item in list">
                                 <td>{{item.code}}</td>
-                                <td></td>
+                                <td>{{item.name}}</td>
                                 <td>{{item.total}}</td>
                                 <td>{{item.total1}}</td>
                                 <td>{{item.column1}}</td>
@@ -173,12 +173,24 @@
                         <label class="col-sm-4 control-label no-padding-right">科目代码</label>
                         <div class="col-sm-8">
                             <span class="input-icon icon-right">
-                                        <input type="text" class="form-control " readonly="readonly" v-model="item.code" />
-                                    </span>
+                                <input type="text" class="form-control " readonly="readonly" v-model="item.code" />
+                            </span>
                         </div>
                     </div>
                 </div>
             </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label class="col-sm-4 control-label no-padding-right">科目名称</label>
+                            <div class="col-sm-8">
+                                <span class="input-icon icon-right">
+                                    <input type="text" class="form-control " readonly="readonly" v-model="item.name" />
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
