完成支出对比表

--- a/TAF.Web/Views/BudgetOutlay/_BudgetOutlayIndex.cshtml
+++ b/TAF.Web/Views/BudgetOutlay/_BudgetOutlayIndex.cshtml
@@ -100,7 +100,7 @@
                                     合计(万元)
                                 </th>
                                 <th style="width: 1000px;" colspan="5">
-                                    经费数量
+                                    经费数额
                                 </th>
                             </tr>
                             <tr>
