--- a/TAF.Web/Views/SysDictionary/_SysDictionaryIndex.cshtml
+++ b/TAF.Web/Views/SysDictionary/_SysDictionaryIndex.cshtml
@@ -76,13 +76,13 @@
                             <tr v-for="item in list">
                                 <td>{{item.category}}</td>
                                 <td>{{item.value}}</td>
-                                <td>{{item.note}}</td>
                                 <td>{{item.value2}}</td>
                                 <td>{{item.value3}}</td>
                                 <td>{{item.value4}}</td>
                                 <td>{{item.value5}}</td>
+                                <td>{{item.note}}</td>
                                 <td>
-                                    <row-command :id="item.id" title="编辑" :name="item.name"></row-command>
+                                    <row-command :id="item.id" title="编辑" :name="item.value"></row-command>
                                 </td>
                             </tr>
                             </tbody>
@@ -186,7 +186,7 @@
                             <label class="col-sm-2 control-label no-padding-right">Note</label>
                             <div class="col-sm-10">
                                 <span class="input-icon icon-right">
-                                    <textarea rows="5" class="form-control " name="note"  >{{item.note}}</textarea>
+                                    <textarea rows="5" class="form-control " name="note"  v-model="item.note"></textarea>
                                 </span>
                             </div>
                         </div>
