--- a/TAF.Web/Views/Product/_ProductIndex.cshtml
+++ b/TAF.Web/Views/Product/_ProductIndex.cshtml
@@ -36,10 +36,7 @@
                                                 规格/型号
                                             </th>
                                             <th style="width: 150px;">
-                                                颜色
-                                            </th>
-                                            <th style="width: 150px;">
-                                                品牌
+                                                单位
                                             </th>
                                             <th style="width: 200px;">
                                                 操作
@@ -56,21 +53,10 @@
                                                 <input type="text" class="form-control" placeholder="规格/型号" v-model="queryEntity.specifications" />
                                             </th>
                                             <th>
-                                                <select id="searchColor" style="width: 100%" v-model="queryEntity.color">
+                                                <select id="searchUnit" style="width: 100%" v-model="queryEntity.unit">
                                                     <option value="">请选择...</option>
                                                     @{
-                                                        foreach (var item in Model.Where(r => r.Category == DictionaryCategory.Mmaterial_ProductColor))
-                                                        {
-                                                            <option value="@item.Value">@item.Value</option>
-                                                        }
-                                                    }
-                                                </select>
-                                            </th>
-                                            <th>
-                                                <select id="searchBrand" style="width: 100%" v-model="queryEntity.brand">
-                                                    <option value="">请选择...</option>
-                                                    @{
-                                                        foreach (var item in Model.Where(r => r.Category == DictionaryCategory.Mmaterial_ProductBrand))
+                                                        foreach (var item in Model)
                                                         {
                                                             <option value="@item.Value">@item.Value</option>
                                                         }
@@ -85,8 +71,7 @@
                                             <td>{{item.name}}</td>
                                             <td>{{item.code}}</td>
                                             <td>{{item.specifications}}</td>
-                                            <td>{{item.color}}</td>
-                                            <td>{{item.brand}}</td>
+                                            <td>{{item.unit}}</td>
                                             <td>
                                                 <row-command :id="item.id" title="编辑" :name="item.name"></row-command>
                                             </td>
@@ -148,43 +133,10 @@
                                     <label class="col-sm-2 control-label no-padding-right">单位<span class="red">*</span></label>
                                     <div class="col-sm-10">
                                         <span class="input-icon icon-right">
-                                            <input type="text" class="form-control " placeholder="必填" name="unit" v-model="item.unit" v-validate:unit="{required:true}" />
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label no-padding-right">颜色</label>
-                                    <div class="col-sm-10">
-                                        <span class="input-icon icon-right">
-                                            <select id="searchColorItem" style="width: 100%" v-model="item.color">
+                                            <select id="searchUnitItem" style="width: 100%" v-model="item.unit">
                                                 <option value="">请选择...</option>
                                                 @{
-                                                    foreach (var item in Model.Where(r => r.Category == DictionaryCategory.Mmaterial_ProductColor))
-                                                    {
-                                                        <option value="@item.Value">@item.Value</option>
-                                                    }
-                                                }
-                                            </select>
-
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label no-padding-right">品牌</label>
-                                    <div class="col-sm-10">
-                                        <span class="input-icon icon-right">
-                                            <select id="searchBrandItem" style="width: 100%" v-model="item.brand">
-                                                <option value="">请选择...</option>
-                                                @{
-                                                    foreach (var item in Model.Where(r => r.Category == DictionaryCategory.Mmaterial_ProductBrand))
+                                                    foreach (var item in Model)
                                                     {
                                                         <option value="@item.Value">@item.Value</option>
                                                     }
