--- a/TAF.Web/Views/Product/_ProductInfoIndex.cshtml
+++ b/TAF.Web/Views/Product/_ProductInfoIndex.cshtml
@@ -20,6 +20,11 @@
                                         仓库
                                     </a>
                                 </li>
+                                <li class="">
+                                    <a data-toggle="tab" href="#year" aria-expanded="false" id="pyear">
+                                        会计年度
+                                    </a>
+                                </li>
                             </ul>
                             <div class="tab-content">
                                 <div id="unit" class="tab-pane active">
@@ -69,34 +74,56 @@
                                         <div class="col-md-6">
                                             <table class="table table-striped table-hover table-bordered ">
                                                 <thead>
-                                                    <tr role="row">
-                                                        <th style="width: 200px;">
-                                                            仓库
-                                                        </th>
-                                                        <th style="width: 200px;">
-                                                            库管员
-                                                        </th>
-                                                        <th style="width: 200px;">
-                                                            操作
-                                                        </th>
-                                                    </tr>
-                                                    <tr role="row">
-                                                        <th>
-                                                            <input type="text" class="form-control" placeholder="仓库" v-model="queryEntity.value" />
-                                                        </th>
-                                                        <th>
-                                                            <input type="text" class="form-control" placeholder="库管员" v-model="queryEntity.value2" />
-                                                        </th>
-                                                        <th>
-                                                            <button type="button" class="btn edit" v-on:click="search('Mmaterial_Storage')"><i class="fa fa-search"></i> 搜索</button>
-                                                            <button type="button" class="btn edit" v-on:click="resetSearch()"><i class="fa fa-times"></i> 重置</button>
-                                                        </th>
-                                                    </tr>
+                                                <tr role="row">
+                                                    <th style="width: 200px;">
+                                                        仓库
+                                                    </th>
+                                                    <th style="width: 200px;">
+                                                        库管员
+                                                    </th>
+                                                    <th style="width: 200px;">
+                                                        操作
+                                                    </th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr v-for="item in list">
+                                                    <td>{{item.value}}</td>
+                                                    <td>{{item.value2}}</td>
+                                                    <td>
+                                                        <row-command :id="item.id" title="编辑" :name="item.value"></row-command>
+                                                    </td>
+                                                </tr>
+                                                </tbody>
+                                                <tfoot is="table-foot" colspan="3"></tfoot>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="year" class="tab-pane ">
+                                    <div class="table-toolbar">
+                                        <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('会计年度','Mmaterial_Year')"><i class="fa  fa-plus"></i> 新增</a>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <table class="table table-striped table-hover table-bordered ">
+                                                <thead>
+                                                <tr role="row">
+                                                    <th style="width: 200px;">
+                                                        年度
+                                                    </th>
+                                                    <th style="width: 200px;">
+                                                        是否当前年度
+                                                    </th>
+                                                    <th style="width: 200px;">
+                                                        操作
+                                                    </th>
+                                                </tr>
                                                 </thead>
                                                 <tbody>
                                                     <tr v-for="item in list">
                                                         <td>{{item.value}}</td>
-                                                        <td>{{item.value2}}</td>
+                                                        <td>{{item.value4=="True"?"是":""}}</td>
                                                         <td>
                                                             <row-command :id="item.id" title="编辑" :name="item.value"></row-command>
                                                         </td>
